--- a/WebApplication1/appsettings.Development.json
+++ b/WebApplication1/appsettings.Development.json
@@ -3,7 +3,7 @@
 
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-7RE3N7J\\SQLEXPRESS;Database=LOL;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=master;Trusted_Connection=true;MultipleActiveResultSets=true;TrustServerCertificate=True",
     "PostgreConnection": "Server=localhost;Port=5432;Database=SIM;User Id=postgres;Password=1;"
   },
 
